<resources>
    <string name="app_name">小憩干货</string>
    <string name="meizi_none_item">没有传入任何数据</string>
    <string name="user_collection">我的收藏</string>
    <string name="collection_none_item">没有收藏任何数据</string>
    <string name="who_none">佚名</string>
    <string name="icons">&#xe7d5;</string>
    <string name="icon_shake">&#x354d;</string>
    <string name="icon_search">&#xe62f;</string>
    <string name="icon_drawer">&#xe614;</string>
    <string name="icon_watch">&#xe721;</string>
    <string name="navigation_menu_sort">分类浏览</string>
    <string name="navigation_menu_collection">我的收藏</string>
    <string name="navigation_menu_about_project">关于项目</string>
    <string name="navigation_menu_about_author">关于作者</string>
    <string name="jump_meizi">妹子跳转</string>
    <string name="plus_a_litter">再加一点</string>
    <string name="shake_and_shake">摇一摇</string>
    <string name="navigation_menu_share">分享</string>
    <string name="network_error">网络连接错误，请检查网络</string>
    <string name="onClick_setting">人家(设置)还没准备好</string>
    <string name="shake_refresh_header">骚年，此路是我开，不让刷新,摇摇更健康</string>
    <string name="shake_loadmore_footer">骚年，此路还是我开，不让加载，摇摇更健康</string>
    <string name="collection_refresh_header">假装可以刷新</string>
    <string name="collection_loadmore_footer">假装可以加载</string>
<<<<<<< HEAD
    <string name="collection_no_item">年轻人，你还没有任何收藏，快去收藏吧</string>
=======
<<<<<<< HEAD
    <string name="collection_no_item">年轻人，你还没有任何收藏，快去收藏吧</string>
=======
>>>>>>> origin/master
>>>>>>> origin/master
    <string name="shake_too_fast">年轻人，间隔太短，过一会再摇</string>
    <string name="save_meizi_successful">妹子接受了你的请求</string>
    <string name="save_meizi_failed">妹子拒绝了你的请求</string>
    <string name="share_successful">分享成功</string>
    <string name="share_failed">分享失败，请重试</string>
<<<<<<< HEAD
=======
<<<<<<< HEAD
>>>>>>> origin/master
    <string name="sharedPreferences_picture">picture</string>
    <string name="sharedPreferences_android">android</string>
    <string name="sharedPreferences_front">front</string>
    <string name="app_version">Version </string>
     <string name="share_app_to_friends">分享小憩干货给好友，应用宝下载地址: http://sj.qq.com/myapp/detail.htm?apkName=com.example.jdk.restapp
                                                               \n直接下载地址：https://fir.im/sakurajiangAPP</string>
    <string name="share_program">分享小憩干货</string>
    <string name="share_text_video">分享文章视频</string>
    <string name="share_image">分享图片</string>
    <string name="type_worry">粗心的程序员写出了有bug的程序，怼死他</string>
<<<<<<< HEAD
=======
=======
    <string name="app_version">Version </string>
>>>>>>> origin/master
>>>>>>> origin/master
    <string name="navigation_menu_about_project_content">
         RespAPP是干货集中营非官方客户端，每天精选妹纸图片，
        一个精选的休息视频，若干精选的Android，前端等相关的技术干货。主页采取了突出妹纸的卡片设计，
        点击图片可查看大图，点击卡片下的文字可进入每日干货，可以分类浏览以及随机浏览，可以通过摇一摇来随机得到干货。
        \n\n本项目开源，是我的第一个上线的项目，
        是学习RxJava，RxAndroid,Retrofit,Material Design等优秀开源框架以及MVVM设计模式的产物,在项目的开发中，
        遇到了很多问题，也收获很多，都一一记载在我的个人博客中，
         项目借鉴了xybCoder的开源项目gank以及burgessjp的开源项目GanHuoIO，收获很多，如果你喜欢我的项目,可以到Github上star一下，感激不尽,另外，感谢开源社区。
        \n\n项目地址: https://github.com/sakurajiang/RestAPP
        \n\n数据来源: 干货集中营 http://gank.io/api
    </string>
    <string name="thanks">特别感谢</string>
    <string name="thank_content"><b>daimajia</b>\n干货集中营 : http://gank.io\n\n<b>xybCoder</b>\ngank : https://github.com/xybCoder/gank\n\n<b>burgessjp</b>\nGanHuoIO : https://github.com/burgessjp/GanHuoIO</string>
    <string name="open_source_libraries_list">com.jakewharton:butterknife:7.0.1\ncom.commit451:PhotoView:1.2.5</string>
    <string name="navigation_menu_about_author_content">
    我是一个2017的应届毕业生，现在是大四，截止到现在，我学习android快一年多了，与一年前相比，无论是在编程知识，还是编程思想
        上，我都有很大的进步，这让我有一种成就感，我喜欢敲代码，也喜欢将东西弄明白，喜欢知其然，更喜欢知其所以然，喜欢看
        优质的开源项目，因为能让我学习到优质的设计思想和技巧，喜欢听音乐，无论是流行还是民谣亦或者是电音，喜欢看犯罪类的电影和书籍，同时，也喜欢看心理学方面的书籍，当然，还喜欢玩游戏。简单的说，我是一个没什么原则，但是
        有底线，乐意助人，爱好广泛的乐观派骚年。如果你有什么问题或者想交流学习，可以发送邮件到wssakurajiang@gmail.com或者
        \n546759734@qq.com
        \n\n我的个人博客 : https://sakurajiang.github.io/
    </string>
    <string name="plus_a_litter_content"><![CDATA[
        再加一点，也就是我的网易云音乐歌单链接，为什么要加这个呢？首先看界面的风格，其次，不觉得边看干货边听歌是一大爽事吗？
        再其次，就是以歌会友。
        <br/><br/>我的歌单 : <a  href="http://music.163.com/#/m/playlist?id=467714580&amp;userid=53689676">网易云歌单链接</a>]]>
    </string>
    <bool name="collection_none_item_clickable">false</bool>
    <bool name="collection_have_item_clickable">true</bool>
    <array name="table_name">
        <item>WebViewTextURL</item>
    </array>

</resources>
