<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/navigation_menu_about_project"
            android:textColor="@color/grey" />

        <RelativeLayout
            android:id="@+id/rl_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autoLink="web"
                android:lineSpacingExtra="2dp"
                android:textColorLink="@color/colorAccent"
                android:text="@string/navigation_menu_about_project_content"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/thanks"
            android:textColor="@color/grey" />

        <RelativeLayout
            android:id="@+id/rl_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:autoLink="web"
                android:lineSpacingExtra="2dp"
                android:textColorLink="@color/colorAccent"
                android:text="@string/thank_content"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </RelativeLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
