<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:title="@string/navigation_menu_about_author"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:text="1.0"
                android:textSize="16sp"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:src="@mipmap/about_author"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0.0dp"
                app:layout_scrollFlags="enterAlways|scroll"
                app:theme="@style/ToolbarStyle"
                app:layout_collapseMode="pin"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_github_36dp"
        app:backgroundTint="@color/colorAccent"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />
  <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/navigation_menu_about_author"
                    android:textColor="@color/grey" />

                <RelativeLayout
                    android:id="@+id/rl_introduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:autoLink="email|web"
                        android:textColorLink="@color/colorAccent"
                        android:lineSpacingExtra="2dp"
                        android:text="@string/navigation_menu_about_author_content"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/plus_a_litter"
                    android:textColor="@color/grey" />
                <RelativeLayout
                    android:id="@+id/rl_thanks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card">
                    <TextView
                        android:id="@+id/music_link_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:lineSpacingExtra="2dp"
                        android:textColorLink="@color/colorAccent"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </RelativeLayout>

            </LinearLayout>
   </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>